selfhost/test/typechecker/import/error_duplicate_import_name.1.out
Error at %FILE_NAME%:2:8
Duplicate name 'a'
  |  import a from "./_exports"
            ^
This name is also declared at (1:8)
  |  import a from "./_exports"
            ^
